Update manual to version 0.21.00

--- a/doc/qgis_umesh_um.tex
+++ b/doc/qgis_umesh_um.tex
@@ -52,6 +52,9 @@
 \endfoot
 \bottomline
 \endlastfoot
+0.21.00  &  - Update for the menu option 'Trials', w.r.t. 1D structures. \\
+         &  - Fixed wiers set into one layer-group. \\
+0.20.01  &  - If no start\_index is given in the \netcdf-file, assume zero. \\
 0.20.00  &  - Name of the 'Current View' in the layer panel changed to 'Variable' name. \\
 0.19.00  &  - Using the spinbox for layers will invalidate (uncheck) the view of a layer.\\
 0.18.00  &  - Determine the mesh 1D edge length after all variables are read.  Other wise sometime a crash will appear.\\
